Fix z-index and some whitelisting on client

--- a/client/apps/edit/components/header/index.styl
+++ b/client/apps/edit/components/header/index.styl
@@ -9,7 +9,7 @@
   border-bottom 1px solid gray-lighter-color
   width 100%
   min-width 1100px
-  z-index 4
+  z-index 7
   background white
 
 #edit-tabs
