--- a/client/apps/edit/components/section_text/index.styl
+++ b/client/apps/edit/components/section_text/index.styl
@@ -117,3 +117,7 @@
 button[data-command-name=jumpLink]
   svg
     transform translate(-14px, -16px)
+
+a.is-jump-link
+  background-color #CFF8E6
+  background-image none !important
